fix: Jumpy scroll behavior
Apparently, rendering content through JS is making the browser think that
there is nothing to scroll. but content appears suddenly & browser wants to scroll to top
Adding a min-height & giving html a smooth scroll behavior sort of fixes this issue
However, it is still quite visible if you notice carefully

--- a/css/main_content.css
+++ b/css/main_content.css
@@ -15,6 +15,7 @@
 }
 
 #themes_container {
+  min-height: 100vh;
   transition: 0.2s ease-in-out;
   display: grid;
   gap: 20px;
